crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__parse_print_hello.snap
---
source: crates/python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    [
        Expr(
            ExprStmt {
                range: 0..20,
                value: Call(
                    CallExpr {
                        range: 0..20,
                        func: Name(
                            NameExpr {
                                range: 0..5,
                                id: "print",
                                ctx: Load,
                            },
                        ),
                        arguments: Arguments {
                            range: 5..20,
                            args: [
                                StringLiteral(
                                    StringLiteralExpr {
                                        range: 6..19,
                                        value: StringLiteralValue {
                                            inner: Single(
                                                StringLiteral {
                                                    range: 6..19,
                                                    value: "Hello world",
                                                    unicode: false,
                                                },
                                            ),
                                        },
                                    },
                                ),
                            ],
                            keywords: [],
                        },
                    },
                ),
            },
        ),
    ],
    [],
)
