crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__parse_string.snap
---
source: crates/python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    [
        Expr(
            ExprStmt {
                range: 0..13,
                value: StringLiteral(
                    StringLiteralExpr {
                        range: 0..13,
                        value: StringLiteralValue {
                            inner: Single(
                                StringLiteral {
                                    range: 0..13,
                                    value: "Hello world",
                                    unicode: false,
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
    [],
)
