crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__slice.snap
---
source: crates/python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    Subscript(
        SubscriptExpr {
            range: 0..8,
            value: Name(
                NameExpr {
                    range: 0..1,
                    id: "x",
                    ctx: Load,
                },
            ),
            slice: Slice(
                SliceExpr {
                    range: 2..7,
                    lower: Some(
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 2..3,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    upper: Some(
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 4..5,
                                value: Int(
                                    2,
                                ),
                            },
                        ),
                    ),
                    step: Some(
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 6..7,
                                value: Int(
                                    3,
                                ),
                            },
                        ),
                    ),
                },
            ),
            ctx: Load,
        },
    ),
    [],
)
