crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__suite__tests__unicode_aliases.snap
---
source: crates/python_parser/src/parser/tests/suite.rs
expression: parse_ast
---
(
    [
        Assign(
            AssignStmt {
                range: 0..37,
                targets: [
                    Name(
                        NameExpr {
                            range: 0..1,
                            id: "x",
                            ctx: Store,
                        },
                    ),
                ],
                value: StringLiteral(
                    StringLiteralExpr {
                        range: 4..37,
                        value: StringLiteralValue {
                            inner: Single(
                                StringLiteral {
                                    range: 4..37,
                                    value: "\u{8}another cool trick",
                                    unicode: false,
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
    [],
)
